--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(string_test grammar/string_test.cpp)
 add_executable(var_test grammar/var_test.cpp)
 add_executable(size_test grammar/size_test.cpp)
 add_executable(modifier_test grammar/modifier_test.cpp)
+add_executable(priority_test grammar/priority_test.cpp)
+add_executable(operator grammar/operator_test.cpp)
