--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(size_test grammar/size_test.cpp)
 add_executable(modifier_test grammar/modifier_test.cpp)
 add_executable(priority_test grammar/priority_test.cpp)
 add_executable(operator grammar/operator_test.cpp)
+add_executable(logical_test grammar/logical_test.cpp)
+add_executable(control_test grammar/control_test.cpp)
