--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -12,3 +12,5 @@ add_executable(priority_test grammar/priority_test.cpp)
 add_executable(operator grammar/operator_test.cpp)
 add_executable(logical_test grammar/logical_test.cpp)
 add_executable(control_test grammar/control_test.cpp)
+add_executable(file_test grammar/file_test.cpp)
+add_executable(function_test grammar/function_test.cpp)
