--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -14,3 +14,6 @@ add_executable(logical_test grammar/logical_test.cpp)
 add_executable(control_test grammar/control_test.cpp)
 add_executable(file_test grammar/file_test.cpp)
 add_executable(function_test grammar/function_test.cpp)
+add_executable(input_test grammar/input_test.cpp)
+add_executable(pointer_test grammar/pointer_test.cpp)
+add_executable(array_test grammar/array_test.c)
