--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(function_test Grammar/C/function_test.cpp)
 add_executable(input_test Grammar/C/input_test.cpp)
 add_executable(pointer_test Grammar/C/pointer_test.cpp)
 add_executable(array_test Grammar/C/array_test.c)
+add_executable(a Work/3.25/a.cpp)
+add_executable(b Work/3.25/b.cpp)
