--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(string_test Grammar/C/string_test.cpp)
 add_executable(var_test Grammar/C/var_test.cpp)
-add_executable(size_test Grammar/C/size_test.cpp)
+add_executable(size_test grammar/C/size_test.cpp)
 add_executable(modifier_test Grammar/C/modifier_test.cpp)
 add_executable(priority_test Grammar/C/priority_test.cpp)
 add_executable(operator Grammar/C/operator_test.cpp)
@@ -25,3 +25,5 @@ add_executable(LQ_4.18_A Contest/LQ/4.18/LQ_4.18_A.cpp)
 add_executable(LQ_4.18_B Contest/LQ/4.18/LQ_4.18_B.cpp)
 add_executable(LQ_4.18_C Contest/LQ/4.18/LQ_4.18_C.cpp)
 add_executable(LQ_4.18_D Contest/LQ/4.18/LQ_4.18_D.cpp)
+
+add_executable(output_test grammar/C/output_test.c)
