--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -27,3 +27,4 @@ add_executable(LQ_4.18_C Contest/LQ/4.18/LQ_4.18_C.cpp)
 add_executable(LQ_4.18_D Contest/LQ/4.18/LQ_4.18_D.cpp)
 
 add_executable(output_test grammar/C/output_test.c)
+add_executable(const_test Grammar/C/const_test.c)
