--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -3,4 +3,5 @@ project(C C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(main datastruct/sequence_list/sl1.c)
+add_executable(sl1 datastruct/sequence_list/sl1.c)
+add_executable(ll1 datastruct/linked_list/ll1.c)
