--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -4,5 +4,6 @@ project(C C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(C main.c)
-add_executable(ll1 datastruct/linked_list/ll1.c)
-add_executable(sl1 datastruct/sequence_list/sl1.c)
+add_executable(ll1 datastruct/list/linked_list/ll1.c)
+add_executable(sl1 datastruct/list/sequence_list/sl1.c)
+add_executable(stack datastruct/stack/stack.c)
