--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(C main.c)
 add_executable(ll1 datastruct/list/linked_list/ll1.c)
 add_executable(sl1 datastruct/list/sequence_list/sl1.c)
 add_executable(stack datastruct/stack/stack.c)
+add_executable(queue datastruct/queue/queue.c)
