--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(ll1 datastruct/list/linked_list/ll1.c)
 add_executable(sl1 datastruct/list/sequence_list/sl1.c)
 add_executable(stack datastruct/stack/stack.c)
 add_executable(queue datastruct/queue/queue.c)
+add_executable(baseConversation datastruct/stack/baseConversation.c)
+add_executable(a experiment/a.c)
