--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(stack datastruct/stack/stack.c)
 add_executable(queue datastruct/queue/queue.c)
 add_executable(baseConversation datastruct/stack/baseConversation.c)
 add_executable(a experiment/a.c)
+add_executable(string datastruct/string/string.c)
