--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(queue datastruct/queue/queue.c)
 add_executable(baseConversation datastruct/stack/baseConversation.c)
 add_executable(a experiment/a.c)
 add_executable(string datastruct/string/string.c)
+add_executable(matrix datastruct/matrix/matrix.c)
