--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(baseConversation datastruct/stack/baseConversation.c)
 add_executable(a experiment/a.c)
 add_executable(string datastruct/string/string.c)
 add_executable(matrix datastruct/matrix/matrix.c)
+add_executable(test test/test.c)
