--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(a experiment/a.c)
 add_executable(string datastruct/string/string.c)
 add_executable(matrix datastruct/matrix/matrix.c)
 add_executable(test test/test.c)
+add_executable(binarytree datastruct/tree/binarytree.c)
