--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -10,12 +10,19 @@ add_executable(size_test grammar/cpp/size_test.cpp)
 add_executable(align "res/C++PrimerPlus/Appendix E/align.cpp")
 add_executable(rain res/CPrimerPlus/Ch10/rain.c)
 add_executable(array2d res/CPrimerPlus/Ch10/array2d.c)
-add_executable(multidimensional_array_announce grammar/c/multidimensional_array_announce_test.c)
+add_executable(multidimensional_array_announce grammar/c/array/multidimensional_array_announce_test.c)
 add_executable(vararr2d res/CPrimerPlus/Ch10/vararr2d.c)
 add_executable(pointer_test grammar/c/pointer_test.cpp)
 add_executable(mem_test grammar/c/mem_test.c)
 add_executable(VLA_test grammar/c/VLA_test.c)
-add_executable(compound_literal_test grammar/c/compound_literal_test.c)
-add_executable(array_as_function_parameters_test grammar/c/array_as_function_parameters_test.c)
-add_executable(more_constant_test grammar/c/more_constant_test.c)
+add_executable(compound_literal_test grammar/c/array/compound_literal_test.c)
+add_executable(array_as_function_parameters_test grammar/c/array/array_as_function_parameters_test.c)
+add_executable(more_constant_test grammar/c/array/more_constant_test.c)
 add_executable(string grammar/c/string.c)
+add_executable(gets_puts_test grammar/c/io/gets_puts_test.c)
+add_executable(fgets2_test grammar/c/io/fgets2_test.c)
+add_executable(gets_s_test grammar/c/io/gets_s_test.c)
+add_executable(output grammar/c/io/output.c)
+add_executable(error_output_test grammar/c/io/error_output_test.c)
+add_executable(str_test grammar/c/string/str_test.c)
+add_executable(test grammar/c/test.c)
