--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(ctype_test grammar/c/ctype_test.c)
 add_executable(arg_test grammar/c/arg_test.c)
 add_executable(const_test grammar/c/const_test.c)
 add_executable(mem_test grammar/c/memory/mem_test.c)
+add_executable(main main.c)
+add_executable(kmp logic/algorithm/kmp/kmp.c)
