--- a/JS/learn_react/package.json
+++ b/JS/learn_react/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-jest": "^24.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
