--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -15,3 +15,12 @@ add_executable(const_test grammar/c/const_test.c)
 add_executable(mem_test grammar/c/memory/mem_test.c)
 add_executable(main main.c)
 add_executable(kmp logic/algorithm/kmp/kmp.c)
+add_executable(scope_test grammar/c/memory/scope_test.c)
+add_executable(static_in_function_test grammar/c/memory/static_in_function_test.c)
+add_executable(auto_test "grammar/c/memory/auto(c)_test.c")
+add_executable(register grammar/c/memory/register.c)
+add_executable(extern_test grammar/c/memory/extern_test.c)
+add_executable(static_test grammar/c/memory/static_test.c)
+add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
+add_executable(restrict_test grammar/c/memory/restrict_test.c)
+add_executable(atomic_test grammar/c/memory/atomic_test.c)
