--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -24,3 +24,4 @@ add_executable(static_test grammar/c/memory/static_test.c)
 add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
 add_executable(restrict_test grammar/c/memory/restrict_test.c)
 add_executable(atomic_test grammar/c/memory/atomic_test.c)
+add_executable(p1042 contest/Luogu/p1042.cpp)
