--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(ctype_test grammar/c/ctype_test.c)
 add_executable(arg_test grammar/c/arg_test.c)
 add_executable(const_test grammar/c/const_test.c)
 add_executable(mem_test grammar/c/memory/mem_test.c)
-add_executable(main main.c)
+
 add_executable(kmp logic/algorithm/kmp/kmp.c)
 add_executable(scope_test grammar/c/memory/scope_test.c)
 add_executable(static_in_function_test grammar/c/memory/static_in_function_test.c)
@@ -25,3 +25,5 @@ add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
 add_executable(restrict_test grammar/c/memory/restrict_test.c)
 add_executable(atomic_test grammar/c/memory/atomic_test.c)
 add_executable(p1042 contest/Luogu/p1042.cpp)
+add_executable(p1036 contest/Luogu/p1036.cpp)
+add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
