--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -27,3 +27,5 @@ add_executable(atomic_test grammar/c/memory/atomic_test.c)
 add_executable(p1042 contest/Luogu/p1042.cpp)
 add_executable(p1036 contest/Luogu/p1036.cpp)
 add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
+add_executable(test test/test.cpp)
+add_executable(test2 test/test2.c)
