--- a/JS/vue/package.json
+++ b/JS/vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "casbin.js": "^0.3.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-14"
