add android and kotlin

--- a/Android/Study/app/src/main/AndroidManifest.xml
+++ b/Android/Study/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,35 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.Study">
+        <activity
+            android:name=".network.NetworkActivity"
+            android:exported="true" />
+
+        <service
+            android:name=".service.IntentService"
+            android:exported="false" />
+        <service
+            android:name=".service.FrontendService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.BindService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".ServiceActivity"
+            android:exported="true" />
+
+        <service
+            android:name=".service.TestService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".ThreadActivity"
+            android:exported="true" />
+
         <receiver
             android:name=".receiver.NotificationReceiver"
             android:enabled="true"
