--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -6,27 +6,43 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 
-add_executable(b homework/experiment/b.c)
-add_executable(qsort logic/algorithm/sort/qsort.c)
-add_executable(ctype_test grammar/c/ctype_test.c)
-
-add_executable(arg_test grammar/c/arg_test.c)
-add_executable(const_test grammar/c/const_test.c)
-add_executable(mem_test grammar/c/memory/mem_test.c)
-
-add_executable(kmp logic/algorithm/kmp/kmp.c)
-add_executable(scope_test grammar/c/memory/scope_test.c)
-add_executable(static_in_function_test grammar/c/memory/static_in_function_test.c)
-add_executable(auto_test "grammar/c/memory/auto(c)_test.c")
-add_executable(register grammar/c/memory/register.c)
-add_executable(extern_test grammar/c/memory/extern_test.c)
-add_executable(static_test grammar/c/memory/static_test.c)
-add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
-add_executable(restrict_test grammar/c/memory/restrict_test.c)
-add_executable(atomic_test grammar/c/memory/atomic_test.c)
-add_executable(p1042 contest/Luogu/p1042.cpp)
-add_executable(test test/test.c)
-add_executable(p1036 contest/Luogu/p1036.cpp)
-add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
-add_executable(test test/test.cpp)
-add_executable(test2 test/test2.c)
+#add_executable(b homework/experiment/b.c)
+#add_executable(qsort logic/algorithm/sort/qsort.c)
+#add_executable(ctype_test grammar/c/ctype_test.c)
+#
+#add_executable(arg_test grammar/c/arg_test.c)
+#add_executable(const_test grammar/c/const_test.c)
+#add_executable(mem_test grammar/c/memory/mem_test.c)
+#
+#add_executable(kmp logic/algorithm/kmp/kmp.c)
+#add_executable(scope_test grammar/c/memory/scope_test.c)
+#add_executable(static_in_function_test grammar/c/memory/static_in_function_test.c)
+#add_executable(auto_test "grammar/c/memory/auto(c)_test.c")
+#add_executable(register grammar/c/memory/register.c)
+#add_executable(extern_test grammar/c/memory/extern_test.c)
+#add_executable(static_test grammar/c/memory/static_test.c)
+#add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
+#add_executable(restrict_test grammar/c/memory/restrict_test.c)
+#add_executable(atomic_test grammar/c/memory/atomic_test.c)
+#add_executable(p1042 contest/Luogu/p1042.cpp)
+#add_executable(p1036 contest/Luogu/p1036.cpp)
+#add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
+#add_executable(test2 test/test2.c)
+add_executable(test grammar/cpp/latest/test.cpp)
+add_executable(initialize grammar/cpp/latest/unit3/3_initialize.cpp)
+add_executable(3_io grammar/cpp/latest/unit3/3_io.cpp)
+add_executable(type_cast grammar/cpp/latest/unit3/3_type_cast.cpp)
+add_executable(4_initialize grammar/cpp/latest/unit4/4_initialize.cpp)
+add_executable(4_string grammar/cpp/latest/unit4/4_string.cpp)
+add_executable(4_struct grammar/cpp/latest/unit4/4_struct.cpp)
+add_executable(4_union grammar/cpp/latest/unit4/4_union.cpp)
+add_executable(4_enum grammar/cpp/latest/unit4/4_enum.cpp)
+add_executable(4_new grammar/cpp/latest/unit4/4_new.cpp)
+add_executable(vector grammar/cpp/latest/unit4/vector.cpp)
+add_executable(5_comma grammar/cpp/latest/unit5/5_comma.cpp)
+add_executable(5_for_range grammar/cpp/latest/unit5/5_for_range.cpp)
+add_executable(5_io grammar/cpp/latest/unit5/5_io.cpp)
+add_executable(6_fileio grammar/cpp/latest/unit6/6_fileio.cpp)
+add_executable(7_array_function grammar/cpp/latest/unit7/7_array_function.cpp)
+add_executable(7_const_pointer grammar/cpp/latest/unit7/7_const_pointer.cpp)
+add_executable(7_funtion_pointer grammar/cpp/latest/unit7/7_funtion_pointer.cpp)
