--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -46,3 +46,16 @@ add_executable(6_fileio grammar/cpp/latest/unit6/6_fileio.cpp)
 add_executable(7_array_function grammar/cpp/latest/unit7/7_array_function.cpp)
 add_executable(7_const_pointer grammar/cpp/latest/unit7/7_const_pointer.cpp)
 add_executable(7_funtion_pointer grammar/cpp/latest/unit7/7_funtion_pointer.cpp)
+add_executable(8_inline_function grammar/cpp/latest/unit8/8_inline_function.cpp)
+add_executable(8_ref grammar/cpp/latest/unit8/8_ref.cpp)
+add_executable(8_template grammar/cpp/latest/unit8/8_template.cpp)
+add_executable(8_linkage grammar/cpp/latest/unit8/8_linkage.cpp)
+add_executable(8_constexpr grammar/cpp/latest/unit8/8_constexpr.cpp)
+add_executable(9_external grammar/cpp/latest/unit9/external/9_external.cpp grammar/cpp/latest/unit9/external/9_external_support.cpp)
+add_executable(9_twofile grammar/cpp/latest/unit9/twofile/9_twofile_1.cpp grammar/cpp/latest/unit9/twofile/9_twofile_2.cpp)
+add_executable(9_cv_qualifier grammar/cpp/latest/unit9/9_cv_qualifier.cpp)
+add_executable(9_language_linking grammar/cpp/latest/unit9/9_language_linking.cpp)
+add_executable(9_namespace grammar/cpp/latest/unit9/9_namespace.cpp)
+add_executable(10_class grammar/cpp/latest/unit10/10_class.cpp)
+add_executable(10_deconstruct grammar/cpp/latest/unit10/10_deconstruct.cpp)
+add_executable(10_class_construct_list grammar/cpp/latest/unit10/10_class_construct_list.cpp)
