--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -29,16 +29,16 @@ set(CMAKE_CXX_STANDARD 14)
 #add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
 #add_executable(test2 test/test2.c)
 add_executable(test grammar/cpp/latest/test.cpp)
-add_executable(initialize grammar/cpp/latest/unit3/3_initialize.cpp)
+add_executable(3_initialize grammar/cpp/latest/unit3/3_initialize.cpp)
 add_executable(3_io grammar/cpp/latest/unit3/3_io.cpp)
-add_executable(type_cast grammar/cpp/latest/unit3/3_type_cast.cpp)
+add_executable(3_type_cast grammar/cpp/latest/unit3/3_type_cast.cpp)
 add_executable(4_initialize grammar/cpp/latest/unit4/4_initialize.cpp)
 add_executable(4_string grammar/cpp/latest/unit4/4_string.cpp)
 add_executable(4_struct grammar/cpp/latest/unit4/4_struct.cpp)
 add_executable(4_union grammar/cpp/latest/unit4/4_union.cpp)
 add_executable(4_enum grammar/cpp/latest/unit4/4_enum.cpp)
 add_executable(4_new grammar/cpp/latest/unit4/4_new.cpp)
-add_executable(vector grammar/cpp/latest/unit4/vector.cpp)
+add_executable(4_vector grammar/cpp/latest/unit4/4_vector.cpp)
 add_executable(5_comma grammar/cpp/latest/unit5/5_comma.cpp)
 add_executable(5_for_range grammar/cpp/latest/unit5/5_for_range.cpp)
 add_executable(5_io grammar/cpp/latest/unit5/5_io.cpp)
@@ -59,3 +59,11 @@ add_executable(9_namespace grammar/cpp/latest/unit9/9_namespace.cpp)
 add_executable(10_class grammar/cpp/latest/unit10/10_class.cpp)
 add_executable(10_deconstruct grammar/cpp/latest/unit10/10_deconstruct.cpp)
 add_executable(10_class_construct_list grammar/cpp/latest/unit10/10_class_construct_list.cpp)
+add_executable(10_class_member grammar/cpp/latest/unit10/10_class_member.cpp)
+add_executable(10_intra_scope_enum grammar/cpp/latest/unit10/10_intra_scope_enum.cpp)
+add_executable(11_op_reload grammar/cpp/latest/unit11/11_op_reload.cpp)
+add_executable(11_friend grammar/cpp/latest/unit11/11_friend_and_ostream.cpp)
+add_executable(11_single_value_constructor grammar/cpp/latest/unit11/11_single_value_constructor.cpp)
+add_executable(11_transfer_function grammar/cpp/latest/unit11/11_transfer_function.cpp)
+add_executable(11_static_member_initialisation grammar/cpp/latest/unit11/11_static_member_initialisation.cpp)
+add_executable(11_brackets_operator grammar/cpp/latest/unit11/11_brackets_operator.cpp)
