--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -66,4 +66,8 @@ add_executable(11_friend grammar/cpp/latest/unit11/11_friend_and_ostream.cpp)
 add_executable(11_single_value_constructor grammar/cpp/latest/unit11/11_single_value_constructor.cpp)
 add_executable(11_transfer_function grammar/cpp/latest/unit11/11_transfer_function.cpp)
 add_executable(11_static_member_initialisation grammar/cpp/latest/unit11/11_static_member_initialisation.cpp)
-add_executable(11_brackets_operator grammar/cpp/latest/unit11/11_brackets_operator.cpp)
+add_executable(12_brackets_operator grammar/cpp/latest/unit12/12_brackets_operator.cpp)
+add_executable(12_static_class_member_function grammar/cpp/latest/unit12/12_static_class_member_function.cpp)
+add_executable(12_in_class_initialisation grammar/cpp/latest/unit12/12_in_class_initialisation.cpp)
+add_executable(13_base_class grammar/cpp/latest/unit13/13_base_class.cpp)
+add_executable(13_virtual grammar/cpp/latest/unit13/13_virtual.cpp)
