--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -63,7 +63,7 @@ add_executable(10_class_member grammar/cpp/latest/unit10/10_class_member.cpp)
 add_executable(10_intra_scope_enum grammar/cpp/latest/unit10/10_intra_scope_enum.cpp)
 add_executable(11_op_reload grammar/cpp/latest/unit11/11_op_reload.cpp)
 add_executable(11_friend grammar/cpp/latest/unit11/11_friend_and_ostream.cpp)
-add_executable(11_single_value_constructor grammar/cpp/latest/unit11/11_single_value_constructor.cpp)
+add_executable(11_single_value_constructor grammar/cpp/latest/unit11/11_single_value&copy_constructor.cpp)
 add_executable(11_transfer_function grammar/cpp/latest/unit11/11_transfer_function.cpp)
 add_executable(11_static_member_initialisation grammar/cpp/latest/unit11/11_static_member_initialisation.cpp)
 add_executable(12_brackets_operator grammar/cpp/latest/unit12/12_brackets_operator.cpp)
@@ -71,3 +71,8 @@ add_executable(12_static_class_member_function grammar/cpp/latest/unit12/12_stat
 add_executable(12_in_class_initialisation grammar/cpp/latest/unit12/12_in_class_initialisation.cpp)
 add_executable(13_base_class grammar/cpp/latest/unit13/13_base_class.cpp)
 add_executable(13_virtual grammar/cpp/latest/unit13/13_virtual.cpp)
+add_executable(14_valarray grammar/cpp/latest/unit14/14_valarray.cpp)
+add_executable(14_private_inherit grammar/cpp/latest/unit14/14_private_inherit.cpp)
+add_executable(14_virtual_inherit_class grammar/cpp/latest/unit14/14_virtual_inherit_class.cpp)
+add_executable(14_class_template grammar/cpp/latest/unit14/14_class_template.cpp)
+add_executable(14_specialization grammar/cpp/latest/unit14/14_specialization.cpp)
