--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -84,3 +84,6 @@ add_executable(15_exception grammar/cpp/latest/unit15/15_exception.cpp)
 add_executable(15_rtti grammar/cpp/latest/unit15/15_rtti.cpp)
 add_executable(15_cast grammar/cpp/latest/unit15/15_cast.cpp)
 add_executable(16_smart_pointer grammar/cpp/latest/unit16/16_smart_pointer.cpp)
+add_executable(16_vector grammar/cpp/latest/unit16/16_vector.cpp)
+add_executable(16_set grammar/cpp/latest/unit16/16_set.cpp)
+add_executable(18_expand_args grammar/cpp/latest/unit18/18_expand_args.cpp)
