--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -87,3 +87,11 @@ add_executable(16_smart_pointer grammar/cpp/latest/unit16/16_smart_pointer.cpp)
 add_executable(16_vector grammar/cpp/latest/unit16/16_vector.cpp)
 add_executable(16_set grammar/cpp/latest/unit16/16_set.cpp)
 add_executable(18_expand_args grammar/cpp/latest/unit18/18_expand_args.cpp)
+add_executable(compiler_1 homework/latest/compiler/compiler_1.c)
+add_executable(os_1 homework/latest/operationSystem/os_1.cpp)
+add_executable(CCPC_B contest/CCPC/CCPC_B.cpp)
+add_executable(CCPC_E contest/CCPC/CCPC_E.cpp)
+add_executable(course_A course/course_A.cpp)
+add_executable(temp temp/temp.cpp)
+add_executable(course_B course/course_B.cpp)
+add_executable(p1003 contest/Luogu/p1003.cpp)
