--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -95,3 +95,11 @@ add_executable(course_A course/course_A.cpp)
 add_executable(temp temp/temp.cpp)
 add_executable(course_B course/course_B.cpp)
 add_executable(p1003 contest/Luogu/p1003.cpp)
+add_executable(Test_D contest/Test/Test_D.cpp)
+add_executable(Test_C contest/Test/Test_C.cpp)
+add_executable(Test_F contest/Test/Test_F.cpp)
+add_executable(Test_A contest/Test/Test_A.cpp)
+add_executable(Test2_A contest/Test/Test2_A.cpp)
+add_executable(Test2_B contest/Test/Test2_B.cpp)
+add_executable(Test2_C contest/Test/Test2_C.cpp)
+add_executable(Test2_F contest/Test/Test2_F.cpp)
