--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -92,14 +92,34 @@ add_executable(os_1 homework/latest/operationSystem/os_1.cpp)
 add_executable(CCPC_B contest/CCPC/CCPC_B.cpp)
 add_executable(CCPC_E contest/CCPC/CCPC_E.cpp)
 add_executable(course_A course/course_A.cpp)
-add_executable(temp temp/temp.cpp)
 add_executable(course_B course/course_B.cpp)
 add_executable(p1003 contest/Luogu/p1003.cpp)
-add_executable(Test_D contest/Test/Test_D.cpp)
-add_executable(Test_C contest/Test/Test_C.cpp)
-add_executable(Test_F contest/Test/Test_F.cpp)
-add_executable(Test_A contest/Test/Test_A.cpp)
-add_executable(Test2_A contest/Test/Test2_A.cpp)
-add_executable(Test2_B contest/Test/Test2_B.cpp)
-add_executable(Test2_C contest/Test/Test2_C.cpp)
-add_executable(Test2_F contest/Test/Test2_F.cpp)
+add_executable(Test_D contest/Test/bak/Test_D.cpp)
+add_executable(Test_C contest/Test/bak/Test_C.cpp)
+add_executable(Test_F contest/Test/bak/Test_F.cpp)
+add_executable(Test_A contest/Test/bak/Test_A.cpp)
+add_executable(Test2_A contest/Test/bak/Test2_A.cpp)
+add_executable(Test2_B contest/Test/bak/Test2_B.cpp)
+add_executable(Test2_C contest/Test/bak/Test2_C.cpp)
+add_executable(Test2_F contest/Test/bak/Test2_F.cpp)
+add_executable(temp2 temp/temp2.c)
+add_executable(os_3 homework/latest/operationSystem/os_3.cpp)
+add_executable(os_4 homework/latest/operationSystem/os_4.c)
+add_executable(temp3 temp/temp3.cpp)
+add_executable(Test3_p1014 contest/Test/bak/Test3_p1014.cpp)
+add_executable(Test3_p1012 contest/Test/bak/Test3_p1012.cpp)
+add_executable(Cl_A contest/Test/bak/Cl_A.cpp)
+add_executable(Cl_B contest/Test/bak/Cl_B.cpp)
+add_executable(Cl_C contest/Test/bak/Cl_C.cpp)
+add_executable(Cl_D contest/Test/bak/Cl_D.cpp)
+add_executable(compiler_4 homework/latest/compiler/compiler_4.cpp)
+add_executable(compiler_5 homework/latest/compiler/compiler_5.cpp)
+add_executable(A1024 contest/Test/bak/A1024.cpp)
+add_executable(A1020 contest/Test/bak/A1020.cpp)
+add_executable(compiler_3 homework/latest/compiler/compiler_3.cpp)
+add_executable(CI2_A contest/Test/bak/CI2_A.cpp)
+add_executable(CI2_B contest/Test/bak/CI2_B.cpp)
+add_executable(CI2_C contest/Test/bak/CI2_C.cpp)
+add_executable(CI2_D contest/Test/bak/CI2_D.cpp)
+add_executable(T contest/Test/bak/T.cpp)
+add_executable(CI2_E contest/Test/bak/CI2_E.cpp)
