--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -123,3 +123,4 @@ add_executable(CI2_C contest/Test/bak/CI2_C.cpp)
 add_executable(CI2_D contest/Test/bak/CI2_D.cpp)
 add_executable(T contest/Test/bak/T.cpp)
 add_executable(CI2_E contest/Test/bak/CI2_E.cpp)
+add_executable(JGSU_T1001 contest/JGSU_OJ/JGSU_T1001.cpp)
