--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -124,3 +124,6 @@ add_executable(CI2_D contest/Test/bak/CI2_D.cpp)
 add_executable(T contest/Test/bak/T.cpp)
 add_executable(CI2_E contest/Test/bak/CI2_E.cpp)
 add_executable(JGSU_T1001 contest/JGSU_OJ/JGSU_T1001.cpp)
+add_executable(JGSU_T1002 contest/JGSU_OJ/JGSU_T1002.cpp)
+add_executable(JGSU_T1008 contest/JGSU_OJ/JGSU_T1008.cpp)
+add_executable(JGSU_T1007 contest/JGSU_OJ/JGSU_T1007.cpp)
