--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -128,3 +128,4 @@ add_executable(JGSU_T1002 contest/JGSU_OJ/JGSU_T1002.cpp)
 add_executable(JGSU_T1008 contest/JGSU_OJ/JGSU_T1008.cpp)
 add_executable(JGSU_T1007 contest/JGSU_OJ/JGSU_T1007.cpp)
 add_executable(JGSU_T1009 contest/JGSU_OJ/JGSU_T1009.cpp)
+add_executable(I contest/ICPC/2018ECF/I.cpp)
