--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -131,3 +131,5 @@ add_executable(JGSU_LQ2119 contest/JGSU_OJ/JGSU_LQ2119.cpp)
 add_executable(JGSU_LQ2121 contest/JGSU_OJ/JGSU_LQ2121.cpp)
 add_executable(JGSU_LQ2120 contest/JGSU_OJ/JGSU_LQ2120.cpp)
 add_executable(E125_A "contest/Codeforces/#E125(Div.2)/E125_A.cpp")
+add_executable(E125_B "contest/Codeforces/#E125(Div.2)/E125_B.cpp")
+add_executable(test3 test/test3.cpp)
