--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -136,3 +136,5 @@ set(CMAKE_CXX_STANDARD 17)
 #add_executable(JGSU_NOIP17S4 contest/JGSU_OJ/JGSU_NOIP17S4.cpp)
 add_executable(a test/a.cpp)
 add_executable(JGSU_NOIP17S4 contest/JGSU_OJ/JGSU_NOIP17S4.cpp)
+add_executable(temp3 temp/temp3.cpp)
+add_executable(temp4 temp/temp4.cpp)
